[project]
name = "boulder-center"
version = "0.1.0"
description = "Find the boulder center of Berlin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
